Correción al cargar ConfigFile si el archivo esta dentro del .jar